# Claude-Keyboard

./: .gitignore  .mcp.json  CLAUDE.md  README.md
claude-code-pad/case/: PARAMS.md  README.md  assembly.step  bottom-case.stl  claude-code-pad.py  test-coupon.stl  top-case.stl
claude-code-pad/docs/: build-guide.md  review-log.md  safety-verification.md
claude-code-pad/firmware/qmk/: README.md
claude-code-pad/firmware/zmk/: BODGE-MAP.md  CMakeLists.txt  README.md
claude-code-pad/firmware/zmk/boards/shields/claude_code_pad/: Kconfig.defconfig  Kconfig.shield  claude_code_pad.conf  claude_code_pad.keymap  claude_code_pad.overlay  claude_code_pad.zmk.yml
claude-code-pad/firmware/zmk/build-artifacts/: zmk.uf2
claude-code-pad/firmware/zmk/config/: west.yml
claude-code-pad/firmware/zmk/drivers/ccp_safety/: CMakeLists.txt  Kconfig  ccp_battery_guard.c  ccp_pair.c  ccp_rgb_init_safe.c  ccp_safety.h  ccp_safety_common.c  ccp_thermal_guard.c
claude-code-pad/firmware/zmk/dts/bindings/: claude-code-pad,ccp-safety.yaml
claude-code-pad/firmware/zmk/dts/bindings/behaviors/: zmk,behavior-ccp-pair.yaml
claude-code-pad/firmware/zmk/tests/ccp_safety/: CMakeLists.txt  prj.conf  testcase.yaml
claude-code-pad/firmware/zmk/tests/ccp_safety/src/: test_cap_registry.c  test_pair_window.c
claude-code-pad/firmware/zmk/zephyr/: module.yml
claude-code-pad/pcb/: DESIGN-NOTES.md  DRC.rpt  bom.csv  claude-code-pad.kicad_dru  claude-code-pad.kicad_pcb  claude-code-pad.kicad_prl  claude-code-pad.kicad_pro  claude-code-pad.kicad_sch  cpl.csv  fp-lib-table  ~claude-code-pad.kicad_pro.lck
claude-code-pad/pcb/_gen/: drc-audit-now.rpt  drc-c9-audit.rpt  drc-current.rpt  drc-cycle1.rpt  drc-cycle10.rpt  drc-cycle11-final.rpt  drc-cycle2.rpt  drc-cycle3.rpt  drc-cycle4.rpt  drc-cycle5.rpt  drc-cycle6.rpt  drc-cycle7.rpt  drc-cycle8-after-caps.rpt  drc-cycle8-baseline.rpt  drc-cycle8-east.rpt  drc-cycle8-parity.rpt  drc-cycle8.rpt  drc-cycle9.rpt  drc-final-audit.rpt  drc-full.rpt  drc-history-bu.rpt  drc-iter-0.rpt  drc-iter-1.rpt  drc-iter-10.rpt  drc-iter-11.rpt  drc-iter-12.rpt  drc-iter-13.rpt  drc-iter-14.rpt  drc-iter-15.rpt  drc-iter-16.rpt  drc-iter-17.rpt  drc-iter-18.rpt  drc-iter-19.rpt  drc-iter-2.rpt  drc-iter-20.rpt  drc-iter-21.rpt  drc-iter-22.rpt  drc-iter-23.rpt  drc-iter-24.rpt  drc-iter-25.rpt  (+43 more)
claude-code-pad/pcb/claude-code-pad.pretty/: C_0402_1005Metric.kicad_mod  C_0805_2012Metric.kicad_mod  D_SOD-123.kicad_mod  D_SOD-523.kicad_mod  Fiducial_1mm_Mask2mm.kicad_mod  Fuse_0805_2012Metric.kicad_mod  MountingHole_1.5mm.kicad_mod  (+14 more)
(+44 files in other folders)
